--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@graphql-hive/client": "^0.29.0",
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
+    "@lexical/html": "^0.14.3",
     "@lexical/link": "^0.14.3",
     "@lexical/react": "^0.14.3",
     "@lexical/utils": "^0.14.3",
