--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "env-var": "7.4.1",
     "express": "4.18.3",
     "fast-safe-stringify": "2.1.1",
+    "flat": "^6.0.1",
     "framer-motion": "6.3.3",
     "graphql": "16.6.0",
     "graphql-request": "6.1.0",
