--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "flat": "^6.0.1",
     "framer-motion": "6.3.3",
     "fs-extra": "^11.2.0",
+    "glob": "^10.3.12",
     "graphql": "16.6.0",
     "graphql-request": "6.1.0",
     "graphql-tag": "2.12.6",
