--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -247,6 +247,9 @@
       "@codelab/frontend/application/tag": [
         "libs/frontend/application/tag/src/index.ts"
       ],
+      "@codelab/frontend/application/test": [
+        "libs/frontend/application/test/src/index.ts"
+      ],
       "@codelab/frontend/application/type": [
         "libs/frontend/application/type/src/index.ts"
       ],
