--- a/package.json
+++ b/package.json
@@ -135,7 +135,6 @@
     "env-var": "7.4.1",
     "express": "4.18.3",
     "fast-safe-stringify": "2.1.1",
-    "flat": "^6.0.1",
     "framer-motion": "6.3.3",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.12",
@@ -335,10 +334,12 @@
     "eslint-plugin-import": "2.29.0",
     "eslint-plugin-jest": "27.6.0",
     "eslint-plugin-jest-formatting": "3.1.0",
+    "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-lodash": "7.4.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
     "eslint-plugin-tailwindcss": "3.15.1",
