--- a/.docker/prod/docker-compose.yaml
+++ b/.docker/prod/docker-compose.yaml
@@ -11,19 +11,19 @@ version: '3.8'
 name: 'codelab'
 services:
   api:
-    image: registry.digitalocean.com/codelabapp/api:latest
+    image: registry.digitalocean.com/codelabapp/api:0.2.0
     restart: unless-stopped
     ports:
       - '4002:4000'
 
   web:
-    image: registry.digitalocean.com/codelabapp/web:latest
+    image: registry.digitalocean.com/codelabapp/web:0.2.0
     restart: unless-stopped
     ports:
       - '3002:3000'
 
   landing:
-    image: registry.digitalocean.com/codelabapp/landing:latest
+    image: registry.digitalocean.com/codelabapp/landing:0.2.0
     restart: unless-stopped
     ports:
       - '3000:3000'
