--- a/terraform/modules/codelab-api/codelab-api-droplet.yaml
+++ b/terraform/modules/codelab-api/codelab-api-droplet.yaml
@@ -23,7 +23,7 @@ write_files:
       version: '3.8'
       services:
         api:
-          image: registry.digitalocean.com/codelabapp/api:0.2.0
+          image: registry.digitalocean.com/codelabapp/api:${docker_tag_version}
           restart: unless-stopped
           ports:
             - "4000:4000"
