--- a/terraform/modules/codelab-api/codelab-api-droplet.yaml
+++ b/terraform/modules/codelab-api/codelab-api-droplet.yaml
@@ -30,6 +30,7 @@ write_files:
           environment:
             - AUTH0_M2M_CLIENT_ID=${auth0_m2m_client_id}
             - AUTH0_M2M_CLIENT_SECRET=${auth0_m2m_client_secret}
+            - AUTH0_DOMAIN=${auth0_domain}
             - NEO4J_URI=${neo4j_uri}
             - NEO4J_USER=${neo4j_user}
             - NEO4J_PASSWORD=${neo4j_password}
