--- a/terraform/modules/codelab-neo4j/codelab-neo4j-droplet.yaml
+++ b/terraform/modules/codelab-neo4j/codelab-neo4j-droplet.yaml
@@ -38,11 +38,21 @@ write_files:
             - NEO4J_apoc_export_file_enabled=true
             - NEO4J_apoc_import_file_enabled=true
             - NEO4J_apoc_import_file_use__neo4j__config=true
+            # https://neo4j.com/docs/operations-manual/current/configuration/configuration-settings/#config_server.default_listen_address
+            - NEO4J_server_default__listen__address=0.0.0.0
             - NEO4J_dbms.security.procedures.unrestricted=apoc.*
             - NEO4J_PLUGINS=["apoc"]
             - NEO4J_AUTH=neo4j/password
           # networks: ["codelab-neo4j"]
           restart: unless-stopped
+      volumes:
+        codelab-neo4j:
+          name: codelab-neo4j
+          driver: local
+          driver_opts:
+            type: none
+            o: bind
+            device: /mnt/neo4j_volumes
     # triggered by config_scripts_user
   - path: /var/lib/cloud/scripts/per-once/start-docker-image.sh
     permissions: '0755'
