--- a/.circleci/config/jobs/docker-web.yml
+++ b/.circleci/config/jobs/docker-web.yml
@@ -1,16 +1,22 @@
 executor: docker-node
-resource_class: medium
+resource_class: large
 steps:
   - restore-workspace
     # This step ensures that Docker commands run in this job will execute on a remote Docker engine.
   - setup_remote_docker:
       docker_layer_caching: true
   # https://discuss.circleci.com/t/pass-env-vars-to-docker-containers-in-circle-2-0/17827/2
+  - nx/set-shas
+  # https://github.com/moby/moby/issues/1996#issuecomment-1763467972
   - run:
       name: 'Build web Docker image'
       command: |
-        docker compose --verbose -f .docker/prod/build.docker-compose.yaml build web
+        # Returns `web` if affected, otherwise `""`
+        NO_CACHE_FILTER=$(nx show projects --affected --type app --base=$NX_BASE | grep -w "web")
 
+        docker compose -f .docker/prod/build.docker-compose.yaml \
+          build web --no-cache-filter="$NO_CACHE_FILTER" \
+          --verbose
   - run:
       name: 'Push Docker Image'
       command: docker compose --verbose -f .docker/prod/build.docker-compose.yaml push web
