--- a/.circleci/config/jobs/docker-web.yml
+++ b/.circleci/config/jobs/docker-web.yml
@@ -12,7 +12,9 @@ steps:
       name: 'Build web Docker image'
       command: |
         # Returns `web` if affected, otherwise `""`
-        NO_CACHE_FILTER=$(nx show projects --affected --type app --base=$NX_BASE | grep -w "web")
+        NO_CACHE_FILTER=$(pnpm nx show projects --affected --type app --base=$NX_BASE | grep -w "web")
+
+        echo $NO_CACHE_FILTER
 
         docker compose -f .docker/prod/build.docker-compose.yaml \
           build web --no-cache-filter="$NO_CACHE_FILTER" \
