--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -458,8 +458,8 @@ workflows:
       - setup-infra-workspace:
           filters:
             branches:
-              ignore:
-                - master
+              only:
+                - staging
           requires:
             - setup-workspace
       - lint:
@@ -502,8 +502,8 @@ workflows:
             - prod
           filters:
             branches:
-              ignore:
-                - master
+              only:
+                - staging
           requires:
             - setup-infra-workspace
       - docker-api:
@@ -511,8 +511,8 @@ workflows:
             - prod
           filters:
             branches:
-              ignore:
-                - master
+              only:
+                - staging
           requires:
             - setup-infra-workspace
       - docker-landing:
@@ -520,8 +520,8 @@ workflows:
             - prod
           filters:
             branches:
-              ignore:
-                - master
+              only:
+                - staging
           requires:
             - setup-infra-workspace
       - notify-success:
@@ -538,8 +538,8 @@ workflows:
       - plan:
           filters:
             branches:
-              ignore:
-                - master
+              only:
+                - staging
           requires:
             - setup-infra-workspace
   infra:
