--- a/.circleci/config/jobs/docker-web.yml
+++ b/.circleci/config/jobs/docker-web.yml
@@ -6,19 +6,14 @@ steps:
   - setup_remote_docker:
       docker_layer_caching: true
   # https://discuss.circleci.com/t/pass-env-vars-to-docker-containers-in-circle-2-0/17827/2
-  - nx/set-shas
+  - nx/set-shas:
+      main-branch-name: master
   # https://github.com/moby/moby/issues/1996#issuecomment-1763467972
   - run:
       name: 'Build web Docker image'
       command: |
-        # Returns `web` if affected, otherwise `""`
-        # `--no-cache-filter` works only with `docker build`
-        NO_CACHE=$(pnpm nx show projects --affected --type app --base=$NX_BASE | grep -w "web" >/dev/null && echo true || echo false)
-
-        echo $NO_CACHE_FILTER
-
-        docker compose --verbose -f .docker/prod/build.docker-compose.yaml \
-          build --no-cache="$NO_CACHE"
+        echo $PWD
+        (./scripts/docker/prod/build-web.sh)
   - run:
       name: 'Push Docker Image'
       command: docker compose --verbose -f .docker/prod/build.docker-compose.yaml push web
