ci: buildx cache

--- a/.circleci/config/jobs/setup-infra-workspace.yml
+++ b/.circleci/config/jobs/setup-infra-workspace.yml
@@ -5,5 +5,5 @@ steps:
   - login-docker
   - persist_to_workspace:
       root: ~/
-      paths:
-        - .docker/config.json
+      # paths:
+      #   - .docker/config.json
