ci: buildx cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -398,6 +398,8 @@ jobs:
       - install-terraform
       - login-docker
       - persist_to_workspace:
+          paths:
+            - .docker/config.json
           root: ~/
   setup-workspace:
     executor: docker-node
