--- a/.circleci/config/jobs/setup-infra-workspace.yml
+++ b/.circleci/config/jobs/setup-infra-workspace.yml
@@ -5,5 +5,6 @@ steps:
   - login-docker
   - persist_to_workspace:
       root: ~/
-      # paths:
-      #   - .docker/config.json
+      # Persists the docker login
+      paths:
+        - .docker/config.json
