--- a/.circleci/config/jobs/docker-api.yml
+++ b/.circleci/config/jobs/docker-api.yml
@@ -7,7 +7,8 @@ steps:
       docker_layer_caching: true
   - run:
       name: 'Build api Docker image'
-      command: docker compose --verbose -f .docker/prod/build.docker-compose.yaml build api
+      command: (./scripts/docker/prod/build-api.sh)
+      # command: docker compose --verbose -f .docker/prod/build.docker-compose.yaml build api
   - run:
       name: 'Push Docker Image'
       command: docker compose --verbose -f .docker/prod/build.docker-compose.yaml push api
