--- a/.circleci/config/jobs/docker-landing.yml
+++ b/.circleci/config/jobs/docker-landing.yml
@@ -8,8 +8,9 @@ steps:
   # https://discuss.circleci.com/t/pass-env-vars-to-docker-containers-in-circle-2-0/17827/2
   - run:
       name: 'Build landing Docker image'
-      command: |
-        docker compose --verbose -f .docker/prod/build.docker-compose.yaml build landing
+      command: (./scripts/docker/prod/build-landing.sh)
+      # command: |
+      #   docker compose --verbose -f .docker/prod/build.docker-compose.yaml build landing
   - run:
       name: 'Push Docker Image'
       command: docker compose --verbose -f .docker/prod/build.docker-compose.yaml push landing
