--- a/.circleci/config/jobs/docker-web.yml
+++ b/.circleci/config/jobs/docker-web.yml
@@ -9,14 +9,10 @@ steps:
   - setup_remote_docker:
       docker_layer_caching: true
   # https://discuss.circleci.com/t/pass-env-vars-to-docker-containers-in-circle-2-0/17827/2
-  - nx/set-shas:
-      main-branch-name: master
   # https://github.com/moby/moby/issues/1996#issuecomment-1763467972
   - run:
       name: 'Build web Docker image'
-      command: |
-        echo $PWD
-        (./scripts/docker/prod/build-web.sh)
+      command: (./scripts/docker/prod/build-web.sh)
   - run:
       name: 'Push Docker Image'
       command: docker compose --verbose -f .docker/prod/build.docker-compose.yaml push web
