--- a/.docker/prod/docker-compose.yaml
+++ b/.docker/prod/docker-compose.yaml
@@ -11,19 +11,26 @@ version: '3.8'
 name: 'codelab'
 services:
   api:
-    image: registry.digitalocean.com/codelabapp/api:0.2.0
+    image: registry.digitalocean.com/codelabapp/api:0.2.6
     restart: unless-stopped
     ports:
       - '4002:4000'
-
+    environment:
+      - AUTH0_M2M_CLIENT_ID=${AUTH0_M2M_CLIENT_ID}
+      - AUTH0_M2M_CLIENT_SECRET=${AUTH0_M2M_CLIENT_SECRET}
+      - AUTH0_DOMAIN=${AUTH0_M2M_CLIENT_SECRET}
+      - NEXT_PUBLIC_API_PORT=${NEXT_PUBLIC_API_PORT}
+      # - NEO4J_URI=${NEO4J_URI}
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=${NEO4J_USER}
+      - NEO4J_PASSWORD=${NEO4J_PASSWORD}
   web:
-    image: registry.digitalocean.com/codelabapp/web:0.2.0
+    image: registry.digitalocean.com/codelabapp/web:0.2.6
     restart: unless-stopped
     ports:
       - '3002:3000'
-
   landing:
-    image: registry.digitalocean.com/codelabapp/landing:0.2.0
+    image: registry.digitalocean.com/codelabapp/landing:0.2.6
     restart: unless-stopped
     ports:
       - '3000:3000'
