--- a/terraform/modules/codelab-api/tftpl/docker-compose.tftpl.yaml
+++ b/terraform/modules/codelab-api/tftpl/docker-compose.tftpl.yaml
@@ -10,6 +10,7 @@ services:
       - AUTH0_M2M_CLIENT_ID=${auth0_m2m_client_id}
       - AUTH0_M2M_CLIENT_SECRET=${auth0_m2m_client_secret}
       - AUTH0_DOMAIN=${auth0_domain}
+      - NEXT_PUBLIC_API_PORT=${next_public_api_port}
       - NEO4J_URI=${neo4j_uri}
       - NEO4J_USER=${neo4j_user}
       - NEO4J_PASSWORD=${neo4j_password}
