--- a/terraform/modules/codelab-neo4j/tftpl/prometheus.tftpl.yaml
+++ b/terraform/modules/codelab-neo4j/tftpl/prometheus.tftpl.yaml
@@ -1,3 +1,6 @@
+global:
+  scrape_interval: 15s # By default, scrape targets every 15 seconds.
+
 scrape_configs:
   - job_name: cadvisor
     scrape_interval: 5s
