--- a/terraform/modules/codelab-neo4j/tftpl/docker-compose.tftpl.yaml
+++ b/terraform/modules/codelab-neo4j/tftpl/docker-compose.tftpl.yaml
@@ -1,10 +1,18 @@
 version: '3.8'
 
+# grafana alloy only discovers containers with attached network
+# https://github.com/grafana/alloy/issues/381
+networks:
+  codelab:
+    driver: bridge
+
 services:
   # Best practices https://assets.neo4j.com/Official-Materials/Neo4j+Monitoring+Best+Practices.pdf
   neo4j:
     image: neo4j:5.11.0
     container_name: neo4j
+    networks:
+      - codelab
     volumes:
       - codelab-neo4j:/data
       # - codelab-neo4j:/plugins
@@ -30,13 +38,20 @@ services:
 
   grafana-alloy:
     image: grafana/alloy:latest
+    container_name: grafana-alloy
+    networks:
+      - codelab
     # Need to run as root to be able to access `"unix:///var/run/docker.sock"`
-    user: 'root'
+    # privileged: true
     volumes:
       - /etc/alloy/config.alloy:/etc/alloy/config.alloy
       - codelab-alloy:/var/lib/alloy/data
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
     ports:
-      - '12345:12345'
+      - '8080:12345'
     command:
       - run
       - '--server.http.listen-addr=0.0.0.0:12345'
@@ -44,53 +59,13 @@ services:
       - /etc/alloy/config.alloy
     restart: unless-stopped
 
-  # prometheus:
-  #   container_name: prometheus
-  #   image: prom/prometheus:v2.46.0
-  #   restart: unless-stopped
-  #   volumes:
-  #     - ./prometheus.yaml:/etc/prometheus/prometheus.yml
-  #     - codelab-neo4j-prometheus:/prometheus
-  #   ports:
-  #     - '9090:9090'
-  #   depends_on:
-  #     - cadvisor
-
-  # node-exporter:
-  #   image: prom/node-exporter:latest
-  #   container_name: node-exporter
-  #   restart: unless-stopped
-  #   volumes:
-  #     - /proc:/host/proc:ro
-  #     - /sys:/host/sys:ro
-  #     - /:/rootfs:ro
-  #   command:
-  #     - '--path.procfs=/host/proc'
-  #     - '--path.rootfs=/rootfs'
-  #     - '--path.sysfs=/host/sys'
-  #     - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-  #   expose:
-  #     - 9100
-
-  # https://prometheus.io/docs/guides/cadvisor/
-  # Container metrics monitoring, use Prometheus to scrape
-  # cadvisor:
-  #   image: gcr.io/cadvisor/cadvisor:latest
-  #   container_name: cadvisor
-  #   # ports:
-  #   #   - 8080:8080
-  #   volumes:
-  #     - /:/rootfs:ro
-  #     - /var/run:/var/run:rw
-  #     - /sys:/sys:ro
-  #     - /var/lib/docker/:/var/lib/docker:ro
-  #   labels:
-  #     - 'traefik.enable=true'
-  #     - 'traefik.http.routers.cadvisor.rule=Host(`cadvisor.neo4j.codelab.app`)'
-  #     - 'traefik.http.routers.cadvisor.entrypoints=web'
-  #     - 'traefik.http.services.cadvisor.loadbalancer.server.port=8080'
-  #   depends_on:
-  #     - neo4j
+  whoami:
+    networks:
+      - codelab
+    image: traefik/whoami
+    container_name: traefik-whoami
+    ports:
+      - 80:80
 
   # traefik:
   #   # The official v3 Traefik docker image
@@ -122,19 +97,6 @@ services:
   #     # So that Traefik can listen to the Docker events
   #     - /var/run/docker.sock:/var/run/docker.sock
 
-  # whoami:
-  #   image: traefik/whoami
-  #   container_name: traefik-whoami
-  #   # ports:
-  #   #   - 80:80
-  #   labels:
-  #     # Explicitly tell Traefik to expose this container
-  #     - 'traefik.enable=true'
-  #     # The domain the service will respond to
-  #     - 'traefik.http.routers.whoami.rule=Host(`whoami.neo4j.codelab.app`)'
-  #     - 'traefik.http.routers.whoami.entrypoints=web'
-  #     - 'traefik.http.services.whoami.loadbalancer.server.port=80'
-
 volumes:
   codelab-neo4j:
     name: codelab-neo4j
@@ -143,13 +105,6 @@ volumes:
       type: none
       o: bind
       device: /mnt/codelab_neo4j_volumes
-  codelab-neo4j-prometheus:
-    name: codelab-neo4j-prometheus
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: /mnt/codelab_neo4j_prometheus_volumes
   codelab-alloy:
     name: codelab-neo4j-alloy
     driver: local
